# gymio

./: .gitignore  README.md  {"duration": 30}
api/: docker-compose.yaml
backend/: .envrc  gymiobackend.service.copy  logger_conf.py  main.py  pyproject.toml  sql_app.db
backend/app/: api.py
backend/ble_system/: collectData.py  service_explorer.py  write_timescaledb_poc.py  write_tsdb_sqla.py
backend/button/: button.py
backend/database/: database.py  models.py  orm_classes.py  resist_train.xls
backend/lights/: lights.py
backend/my_types/: Timer.py  Workout.py  __init__.py  my_types.py  pydantic_classes.py
backend/server/: api.py
backend/trainer/: trainer.py
bleStream/: collectData.py
documention/: gymio er.drawio
documention/diagrams/: 1_high_level_schematic.drawio
frontend/: index.html  package-lock.json  package.json
frontend/public/: manifest.json
frontend/src/: App.js  App.jsx  config.jsx  index.jsx  store.jsx  themeGym.js
frontend/src/apiClient/: timerClient.jsx
frontend/src/components/: ChooseWorkout.jsx  ContentLayout.js  Header.js  Header.jsx  Login.jsx  TopNav.jsx  WorkoutForm.jsx  index.js  index.jsx
frontend/src/constants/: constants.jsx  index.jsx
frontend/src/contexts/: Contexts.jsx
frontend/src/layout/: ContentLayout.jsx
frontend/src/main/: main.jsx
frontend/src/server/: timer.jsx
timer_api/: Dockerfile  main.py  my_types.py  pyproject.toml  trainer.py
timer_api/trainer/: trainer.py
timer_api/types/: my_types.py
ui/: .dockerignore  Dockerfile  package-lock.json  package.json
ui/src/: App.js  Routes.js  index.js  state.js
ui/src/components/: Header.js
ui/src/constants/: routes.js  timerSteps.js
ui/src/pages/: Home.jsx  NotFound.jsx
