[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Laith Al-Saadoon <alsaadoonlaith@gmail.com>"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.10"
APScheduler = "^3.10.1"
gpiozero = "^1.6.2"
rpi-gpio = "^0.7.1"
fastapi = {extras = ["all"], version = "^0.95.1"}
systemd-python = "^235"
psycopg = "^3.1.8"
bleak = "^0.20.2"
sqlalchemy = "^2.0.12"
websocket = "^0.2.1"
asyncio = "^3.4.3"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
