[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Laith Al-Saadoon <alsaadoonlaith@gmail.com>"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.10"
APScheduler = "^3.10.4"
gpiozero = "^2.0.1"
rpi-gpio = "^0.7.1"
fastapi = {extras = ["all"], version = "^0.95.1"}
psycopg = "^3.2.3"
bleak = "^0.20.2"
sqlalchemy = "^2.0.35"
websocket = "^0.2.1"
asyncio = "^3.4.3"

[tool.poetry.group.dev.dependencies]
ruff = "0.6.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
