[tool.poetry]
name = "timer-api"
version = "0.1.0"
description = ""
authors = ["Laith Al-Saadoon <alsaadoonlaith@gmail.com>"]
readme = "README.md"
packages = [{include = "timer_api"}]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.3"
APScheduler = "^3.10.1"
gpiozero = "^1.6.2"
rpi-gpio = "^0.7.1"
fastapi = {extras = ["all"], version = "^0.95.1"}

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py39']

[tool.isort]
profile = "black"
